fixed dialog title wrapping

--- a/src-modules/org/opencms/gwt/client/ui/css/general.css
+++ b/src-modules/org/opencms/gwt/client/ui/css/general.css
@@ -22,6 +22,10 @@
 
 .cmsState-up, .cmsState-up-hovering, .cmsState-up-disabled, .cmsState-down, .cmsState-down-hovering, .cmsState-down-disabled, .cmsHovering{};
 
+.cornerTop {
+	white-space: nowrap;
+}
+
 /** browser specific styles **/
 @if user.agent gecko1_8 gecko{
 	/** firefox **/
